Restore nested bootcamp URL with corrected relative paths

--- a/bootcamps/creative-ai-bootcamp/01.html
+++ b/bootcamps/creative-ai-bootcamp/01.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootcamp | jaagastudy</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../../index.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="images/jaaga_logo.png">
+    <link rel="icon" type="image/png" href="../../images/jaaga_logo.png">
     <meta property="og:image" content="https://haricm.github.io/jaagastudy/images/jaaga_logo.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://haricm.github.io/jaagastudy/images/jaaga_logo.png">
@@ -15,12 +15,12 @@
 
 <body>
     <nav>
-        <div class="logo"><a href="index.html">Jaaga<span>Study</span></a></div>
+        <div class="logo"><a href="../../index.html">Jaaga<span>Study</span></a></div>
         <div class="nav-links">
-            <a href="index.html">Home</a>
+            <a href="../../index.html">Home</a>
             <a href="#" class="active">Bootcamp</a>
 
-            <a href="blog.html">Blog</a>
+            <a href="../../blog.html">Blog</a>
             <a href="https://discord.gg/ZtakuZXEF" target="_blank" class="discord-btn">Join Discord</a>
         </div>
         <button class="mobile-menu-btn" onclick="toggleMenu()">☰</button>
@@ -125,14 +125,15 @@
                     <div class="partners">
                         <a href="https://www.mars.college/" target="_blank" style="text-decoration: none;">
                             <div class="partner-item mars-container">
-                                <img src="images/partners/mars-logo.png" alt="Mars College"
+                                <img src="../../images/partners/mars-logo.png" alt="Mars College"
                                     class="partner-logo mars-logo">
                                 <span class="partner-text">Mars College</span>
                             </div>
                         </a>
                         <!-- Eden has logo and text together in image -->
                         <div class="partner-item">
-                            <img src="images/partners/eden-full.png" alt="Eden Art" class="partner-logo eden-logo">
+                            <img src="../../images/partners/eden-full.png" alt="Eden Art"
+                                class="partner-logo eden-logo">
                         </div>
                     </div>
                 </div>
