Restore date to blog roll entry

--- a/blog.html
+++ b/blog.html
@@ -53,6 +53,9 @@
                         <div style="margin-bottom: 0.5rem;">
                             <span class="tag-pill">Announcement</span>
                         </div>
+                        <span class="meta"
+                            style="font-size: 0.9rem; color: #666; display: block; margin-bottom: 0.5rem;">Jan 12,
+                            2026</span>
                         <a href="blog/001-jaaga-study-is-back.html">
                             <h3>Jaaga Study is back!</h3>
                         </a>
