Update bootcamp description on home page

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@ title: jaagastudy | Future of Learning
             <div class="card" style="max-width: 500px;">
                 <span class="meta">Jan 19 - Mar 13, 2026</span>
                 <h3>Creative AI Bootcamp</h3>
-                <p>A 9-week deep dive into Generative AI, Agentic Workflows, and Digital Art.
-                    Learn to build with the tools of tomorrow.</p>
+                <p>In conjunction with Mars.College</p>
 
                 <div style="margin-top: 1.5rem; display: flex; gap: 1rem; flex-wrap: wrap;">
                     <a href="{{ '/bootcamps/creative-ai-bootcamp/01.html' | relative_url }}"
