Update home page CTA: Primary Discord, Secondary View Details

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@ title: jaagastudy | Future of Learning
                 <p>In conjunction with Mars.College</p>
 
                 <div style="margin-top: 1.5rem; display: flex; gap: 1rem; flex-wrap: wrap;">
-                    <a href="{{ '/bootcamps/creative-ai-bootcamp/01.html' | relative_url }}"
-                        class="btn btn-primary">View Details</a>
+                    <a href="https://discord.gg/ZtakuZXEF" target="_blank" class="btn btn-primary">Join Discord</a>
+                    <a href="{{ '/bootcamps/creative-ai-bootcamp/01.html' | relative_url }}" class="btn btn-outline"
+                        style="color: var(--text-dark); border-color: var(--text-dark);">View Details</a>
                 </div>
             </div>
         </div>
