Update SEO: Meta tags, canonical URL, and sharing image

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ---
 layout: default
-title: jaagastudy | Future of Learning
+title: Jaaga Study | A New Kind of School for a New Way of Living
+description: "Jaaga Study: Move beyond consuming tech to become architects of our own world—mastering the skills to
+live, learn, and thrive through hands-on practice together."
+image: /images/meta-share.jpg
 ---
 
 <!-- Title Section -->
