Update Bootcamp SEO: Title, Meta Description, and Share Image

--- a/bootcamps/creative-ai-bootcamp/01.html
+++ b/bootcamps/creative-ai-bootcamp/01.html
@@ -1,6 +1,8 @@
 ---
 layout: default
-title: Bootcamp | jaagastudy
+title: Creative AI Bootcamp | Jaaga Study
+description: "A virtual extension of the Mars College Creative AI program. Get hands-on with emerging tools. Join Now."
+image: /images/bootcamp-share.jpg
 ---
 
 <!-- Title Section -->
