Update blog post content: Jaaga Study is back

--- a/_posts/2026-01-12-jaaga-study-is-back.html
+++ b/_posts/2026-01-12-jaaga-study-is-back.html
@@ -4,26 +4,11 @@ title: Jaaga Study is back!
 tags: [Announcement, Bootcamp]
 ---
 
-<p>We are thrilled to launch the first cohort of the Creative AI Bootcamp. This 9-week experiment
-    brings
-    together artists, coders, and dreamers to explore the edges of generative technology.</p>
+<p>From Jan 19th to March 13th, we’ll be testing a virtual extension of the Mars College Creative AI program. We aren’t
+    following a rigid syllabus; we’re here to get hands-on with emerging tools and see what we can build together in a
+    shared, remote space. This nine-week virtual cohort is an experimental pilot.</p>
 
-<h2>Why Now?</h2>
-<p>The tools for creation are changing faster than ever. We believe the best way to understand this
-    shift is not by reading about it, but by building with it. This cohort is designed to be a
-    sandbox—a
-    place to mess around, break things, and find new workflows.</p>
-
-<h2>The Structure</h2>
-<p>We have divided the program into three key phases:</p>
-<ul>
-    <li><strong>Ideas Week:</strong> Just vibing and finding the right problems to solve.</li>
-    <li><strong>Skill Sprint:</strong> Deep diving into Eden.Art, ComfyUI, and Agentic workflows.
-    </li>
-    <li><strong>The Build:</strong> Creating a final project that says something new.</li>
-</ul>
-
-<p>If you are interested in joining us, applications are open until Jan 18th.</p>
+<p>Join us in this shared, remote space to see what we can build together.</p>
 
 <div style="margin-top: 3rem; text-align: center;">
     <a href="{{ '/bootcamps/creative-ai-bootcamp/01.html' | relative_url }}" class="btn btn-primary">Learn More about
