Update bootcamp hero text to 'Join the cohort now'

--- a/bootcamps/creative-ai-bootcamp/01.html
+++ b/bootcamps/creative-ai-bootcamp/01.html
@@ -14,7 +14,7 @@ nav_id: bootcamp
     <p class="hero-description" style="color: #cbd5e1; max-width: 600px; margin: 0 auto 1.5rem; font-size: 1.1rem;">
         Jan 19 – Mar 13 | 9 Weeks | Discord
     </p>
-    <p style="color: #cbd5e1; margin-bottom: 2rem;">Join the cohort by Jan 18th</p>
+    <p style="color: #cbd5e1; margin-bottom: 2rem;">Join the cohort now</p>
     <a href="https://discord.gg/ZtakuZXEF" class="btn btn-primary" target="_blank">Join Discord</a>
 </div>
 
